# Tunnel_Localization_Algorithm

./: README.md  true_value.txt
devel/: .catkin  .rosinstall
devel/lib/: libDBoW3.so.0.0  libDBoW3.so.0.0.1
devel/lib/comparision/: comparision
devel/lib/pkgconfig/: HMM.pc  VLAD.pc  comparision.pc  viterbi.pc
devel/share/HMM/cmake/: HMMConfig.cmake
devel/share/VLAD/cmake/: VLADConfig.cmake
devel/share/comparision/cmake/: comparisionConfig.cmake
devel/share/viterbi/cmake/: viterbiConfig.cmake
src/DBOW3/: CMakeLists.txt  package.xml
src/DBOW3/src/: Vocabulary.cpp  Vocabulary.h
src/DBOW3/utils/: demo_general(VLAD).cpp  demo_general.cpp
src/HMM/: CMakeLists.txt
src/HMM/src/: 2D-2D.cpp  3D_2D.h  LoFRT.h  ViterbiMatch.cpp  local_ORB.cpp  main.cpp  make_data.h  orbmatch.h  precise_position.cpp  verify.cpp  viterbi.cpp
src/LoFTR/: inference.py  k_means.py  loftr.py  ransac.py
src/comparision/: CMakeLists.txt  package.xml
src/comparision/src/: LoFTR.cpp  ORB.cpp  ORB.h  coarse_handle.cpp  coarse_handle.h  feature_extraction.cpp  feature_extraction.h  main.cpp  match.cpp  match.h  match_handle.cpp  match_handle.h  verify.cpp  verify.h
src/viterbi/: CMakeLists.txt
src/viterbi/src/: 2D-2D.h  3D_2D.cpp  LoFRT.cpp  ViterbiMatch.cpp  ViterbiMatch.h  coarse_handle.cpp  coarse_handle.h  local_ORB.h  main.cpp  make_data.cpp  orbmatch.cpp  precise_position.cpp  precise_position.h  verify.cpp  verify.h  viterbi.cpp  viterbi.h
